[metadata]
name = pyweaving
version = 0.8
license = MIT
description = Python Weaving Tools
long_description = file: README.rst
keywords = weaving handweaving wif draft pattern
author = Scott Torborg
author_email = storborg@gmail.com
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Topic :: Multimedia :: Graphics

[options]
python_requires = >=3.8
zip_safe = False
packages = find_namespace:
package_dir =
    =src
include_package_data = True
install_requires =
	Pillow>=2.1.0
    svgwrite>=1.4.1

[options.entry_points]
console_scripts =
	pyweaving = pyweaving.cmd:main

[options.packages.find]
where=src

[versioneer]
VCS = git
style = pep440
versionfile_source = src/pyweaving/_version.py
versionfile_build = pyweaving/_version.py
tag_prefix = ''
